# volume-segmantics

./: 2dunet_environment.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  paper.bib  paper.md  pyproject.toml
.github/: docs.yml
.github/workflows/: docs.yml  release.yml  test.yml  tests.yml
2dunet/notebooks/: twelve_way_prediction.ipynb
2dunet/scripts/: combined_2d_unet.py  consensus_threshold.py  crop_and_clip.py  predict_2d_unet.py  predict_2d_unet_oo.py  train_2d_unet.py  train_2d_unet_oo.py
2dunet/scripts/settings/: 2d_unet_predict_settings.yaml  2d_unet_threshold_settings.yaml  2d_unet_train_settings.yaml
2dunet/scripts/unet2d/: model.py  prediction_manager.py  predictor.py  trainer.py
2dunet/scripts/utilities/: arg_parsing.py  augmentations.py  auto_seg_run_and_block.sh  base_data_manager.py  base_data_utils.py  cmdline.py  config.py  crop_and_clip.py  data.py  dataloaders.py  datasets.py  early_stopping.py  run_unet_segmentation.sh  settingsdata.py  unet2d.py
2dunet/scripts/utilities/slicers/: predictionslicers.py  slicerbase.py  trainingslicers.py
2dunet/scripts/utilities/unet2d/: model.py  prediction_manager.py  predictor.py  trainer.py
3dunet/scripts/: predict_3d_unet.py  predict_3d_unet_oo.py  train_3d_unet.py  train_3d_unet_multi.py  train_3d_unet_oo.py
3dunet/scripts/settings/: 200724_3dUnet_sand_brine_meth_multilabel_3cDL.yaml  3d_unet_predict_settings.yaml  3d_unet_predict_settings_multi.yaml  3d_unet_train_settings.yaml
3dunet/scripts/utilities/: cmdline.py  config.py  data_utils_base.py  unet3d.py
3dunet/settings/: 3d_unet_train_settings.yaml
3dunet/utilities/: data_utils_3d.py  unet3d.py
common/: predict_3d_unet_multi.py  predict_3d_unet_oo.py  train_2d_unet_oo.py  train_3d_unet_multi.py  train_3d_unet_oo.py
common/settings/: 3d_unet_predict_settings.yaml  3d_unet_predict_settings_twolabel.yaml  3d_unet_train_settings.yaml  3d_unet_train_settings_multilabel.yaml  3d_unet_train_settings_twolabel.yaml
common/utilities/: cmdline.py  config.py  data.py  data_utils_3d.py  data_utils_base.py  early_stopping.py  unet3d.py
docs/: index.html  search.js  volume_segmantics.html
docs/volume_segmantics/: data.html  model.html  utilities.html
placenta/notebooks/: twelve_way_prediction.ipynb
placenta/scripts/: 2d_unet_train_settings.yaml  train_2d_unet.py
scripts/: predict_2d_unet_oo.py  train_2d_unet_oo.py
scripts/settings/: 2d_unet_predict_settings.yaml
settings/: 2d_model_predict_settings.yaml  2d_model_train_settings.yaml  2d_unet_train_settings.yaml
tests/: conftest.py  test_augmentations.py  test_base_data_manager.py  test_dataloaders.py  test_datasets.py  test_model_2d.py  test_pytorch3dunet_losses.py  test_pytorch3dunet_metrics.py  test_settings_data.py  test_slicers.py  test_vol_seg_2d_predictor.py  test_vol_seg_2d_trainer.py  test_vol_seg_prediction_manager.py
training_data/: README.md  vessels_256cube_LABELS.h5
unet-settings/: 2d_unet_predict_settings.yaml  2d_unet_train_settings.yaml  3d_unet_predict_settings.yaml  3d_unet_train_settings.yaml
volseg-settings/: 2d_model_predict_settings.yaml  2d_model_train_settings.yaml
volume_segmantics/data/: __init__.py  augmentations.py  base_data_manager.py  dataloaders.py  datasets.py  pytorch3dunet_losses.py  pytorch3dunet_metrics.py  pytorch3dunet_seg_metrics.py  settings_data.py  slicers.py
volume_segmantics/model/: __init__.py  model_2d.py
volume_segmantics/model/operations/: unet2d_prediction_manager.py  unet2d_predictor.py  unet2d_trainer.py  vol_seg_2d_predictor.py  vol_seg_2d_trainer.py  vol_seg_prediction_manager.py  volseg_2d_predictor.py
volume_segmantics/scripts/: predict_2d_model.py  predict_2d_unet.py  train_2d_model.py  train_2d_unet.py
volume_segmantics/utilities/: __init__.py  arg_parsing.py  base_data_utils.py  config.py  early_stopping.py  pytorch3dunet_utils.py
